# dawg-ai-web

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .railway-cache-bust  .railway-deploy  AI-AUDIO-INTEGRATION.md  API_CONTRACTS.md  API_QUICK_REFERENCE.md  AUDIT_AND_PARALLEL_PLAN.md  CLAUDE.md  CLAUDE_MODULE_PROMPTS.md  COMPREHENSIVE_AUDIT_REPORT.md  COORDINATOR_GUIDE.md  CURRENT_DEPLOYMENT_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  DESIGN_SYSTEM_COMPLETE.md  DEV_PROD_SYNC_GUIDE.md  DNS_RECORDS_QUICK_REFERENCE.md  DOMAIN_SETUP_GUIDE.md  Dockerfile  Dockerfile.orchestrator  FINAL_DEPLOYMENT_STATUS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_TEST_RESULTS.md  FIXES_SUMMARY.md  GMAIL_SETUP.md  GOOGLE_AUTH_SETUP.md  IMESSAGE_BUILD_SUMMARY.md  IMESSAGE_QUICKSTART.md  IMESSAGE_SETUP_NOW.md  INSTANCE_1_COMPLETE.md  INSTANCE_1_PROMPT.md  INSTANCE_2_AI_INTEGRATION_COMPLETE.md  INSTANCE_2_JARVIS_COMPLETE.md  INSTANCE_3_COMPLETE.md  INSTANCE_3_PROMPT.md  INSTANCE_3_VOICE_COMPLETE.md  (+120 more)
.husky/: pre-commit
app/: page.tsx
apps/ai-services/: package.json  pyproject.toml
backend/: .env.example  README.md  package-lock.json  package.json
config/: decision-rules.json  email-templates.json  lead-scoring-rules.json  monitoring.ts  notification-templates.json  supabase-schema.sql
demo/: smoke-test.ts
native-bridges/clap/: BUILD_GUIDE.md  Cargo.toml  index.d.ts  index.js  index.node  package-lock.json  package.json
native-bridges/clap/src/: lib.rs  lib.rs.bak  lib.rs.bak2  lib.rs.bak3
native-bridges/vst3/: Cargo.toml
src/: app.css  (+3 more)
(+446 files in other folders)
