[package]
name = "clap-bridge"
version = "0.1.0"
edition = "2021"
authors = ["DAWG AI"]
description = "CLAP audio plugin bridge for DAWG AI"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Node.js bindings
napi = "2.16"
napi-derive = "2.16"

# CLAP plugin loading
clap-sys = "0.3"
libloading = "0.8"

# Utilities
once_cell = "1.19"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
